fix event info wrap, joining when max is 0

--- a/src/app/event-list/event/event.component.scss
+++ b/src/app/event-list/event/event.component.scss
@@ -21,15 +21,18 @@
     padding: 10px;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
+
     .info-item {
       display: flex;
       align-items: center;
-      font-size: 1rem;
-      gap: 3px;
+
       mat-icon {
         font-size: 1.5rem;
         place-content: center;
       }
+    }
+    .last-item {
+      justify-content: right;
     }
   }
 
@@ -61,8 +64,8 @@
 @media (max-width: 768px) {
   .event {
     width: 15rem;
-    height:auto;
-    .event-info{
+    height: auto;
+    .event-info {
       flex-direction: column;
     }
   }
